<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:title="@string/home"
            android:id="@+id/home"
            android:icon="@drawable/ic_home"/>
        <item
            android:title="@string/about"
            android:id="@+id/about"
            android:icon="@drawable/ic_about_us"/>
        <item
            android:title="@string/service"
            android:id="@+id/service"
            android:icon="@drawable/ic_our_services"/>
        <item
            android:title="@string/work"
            android:id="@+id/work"
            android:icon="@drawable/ic_portfolio"/>
        <item
            android:title="@string/clients"
            android:id="@+id/clients"
            android:icon="@drawable/ic_client"/>
        <item
            android:title="@string/team"
            android:id="@+id/team"
            android:icon="@drawable/ic_team"/>
        <item
            android:title="@string/adress"
            android:id="@+id/adress"
            android:icon="@drawable/ic_adress_icon"/>
    </group>

</menu>